--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -6,7 +6,7 @@
                 <div class="input-group">
                     <input id="startDate" class="form-control" placeholder="yyyy-mm-dd" name="dp"
                         formControlName="startDate" ngbDatepicker #d="ngbDatepicker"
-                        (blur)="getDesAndDepByStartDate()"/>
+                        (dateSelect)="getDesAndDepByStartDate()" (input)="getDesAndDepByStartDate()"/>
                     <button class="btn btn-outline-secondary bi bi-calendar3" (click)="d.toggle()"
                         type="button"></button>
                 </div>
