--- a/src/app/component/schedule-management/schedule-management.component.html
+++ b/src/app/component/schedule-management/schedule-management.component.html
@@ -28,7 +28,7 @@
                 <td>{{s.seatLeft}}</td>
                 <td>{{s.startDate}}</td>
                 <td>
-                    <button type="button" class="btn btn-warning"><i class="fa fa-edit"></i>Edit</button>
+                    <button type="button" (click)="openEdit(editForm, s)" class="btn btn-warning" [disabled]="s.seatLeft !== s.totalSeat" ngClass=""><i class="fa fa-edit"></i>Edit</button>
                     <button type="button" class="btn btn-danger"><i class="fa fa-remove"></i>Delete</button>
                 </td>
             </tr>
@@ -87,6 +87,60 @@
                     <select id="selectBus" class="form-control" formControlName="bus">
                         <option *ngFor="let b of listBus" [value]="b.busId">{{b.name}}</option>
                     </select>
+                </div>
+            </div>
+        </div>
+        <div class="modal-footer">
+            <button type="submit" data-dismiss="modal" class="btn btn-info">Submit</button>
+            <button type="button" class="btn btn-outline-dark" (click)="modal.close()">Cancel</button>
+        </div>
+        <!-- <span class="text-danger">{{msg}}</span> -->
+    </form>
+</ng-template>
+
+<ng-template #editForm let-modal>
+    <form (ngSubmit)="editSubmit()" [formGroup]="editScheduleForm">
+        <div class="modal-header">
+            <h4 class="modal-title" id="modal-basic-title">Edit Schedule</h4>
+            <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="modal-body">
+            <div class="form-group">
+                <label for="startTime">Start Date</label>
+                <div class="input-group">
+                    <input id="editStartDate" class="form-control" placeholder="yyyy-mm-dd" name="dp" formControlName="editStartDate"
+                        ngbDatepicker #d="ngbDatepicker" [(ngModel)]="model"/>
+                    <button class="btn btn-outline-secondary bi bi-calendar3" (click)="d.toggle()"
+                        type="button"></button>
+                </div>
+            </div>
+            <div class="form-group">
+                
+                <div class="time_picker">
+                    <div class="picker_group">
+                        <label class="date-label" for="startTime">Start Time</label>
+                        <timepicker id="editStartTime"  formControlName="editStartTime" [showMeridian]="false" [minuteStep]="1">
+                        </timepicker>
+                    </div>
+                    <div class="picker_group">
+                        <label class="date-label" for="endTime">End Time</label>
+                        <timepicker id="editEndTime" formControlName="editEndTime" [showMeridian]="false" [minuteStep]="1">
+                        </timepicker>
+                    </div>
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="departure">Departure</label>
+                <div class="input-group">
+                    <input type="text" id="editDeparture" class="form-control" name="editDeparture" formControlName="editDeparture">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="destination">Destination</label>
+                <div class="input-group">
+                    <input type="text" id="editDestination" class="form-control" name="editDestination" formControlName="editDestination">
                 </div>
             </div>
         </div>
