--- a/src/app/component/schedule-management/schedule-management.component.html
+++ b/src/app/component/schedule-management/schedule-management.component.html
@@ -29,7 +29,7 @@
                 <td>{{s.startDate}}</td>
                 <td>
                     <button type="button" (click)="openEdit(editForm, s)" class="btn btn-warning" [disabled]="s.seatLeft !== s.totalSeat" ngClass=""><i class="fa fa-edit"></i>Edit</button>
-                    <button type="button" class="btn btn-danger"><i class="fa fa-remove"></i>Delete</button>
+                    <button type="button" class="btn btn-danger" (click)="openDelete(deleteConfirm, s)"><i class="fa fa-remove"></i>Delete</button>
                 </td>
             </tr>
         </tbody>
@@ -150,4 +150,23 @@
         </div>
         <!-- <span class="text-danger">{{msg}}</span> -->
     </form>
+</ng-template>
+
+<ng-template #deleteConfirm let-modal>
+    <div class="modal-header">
+        <h4 class="modal-title">Confirm Delete</h4>
+        <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="modal-body">
+        <h2>Are you sure you want to delete this record.</h2>
+        <div class="text-center">
+            <button data-dismiss="modal" class="btn btn-danger" (click)="onDelete()">Yes, Delete!</button>
+        </div>
+        <div>{{msg}}</div>
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Cancel</button>
+    </div>
 </ng-template>
