--- a/src/app/component/home/home.component.css
+++ b/src/app/component/home/home.component.css
@@ -40,41 +40,33 @@
 .input-group-text {
     display: flex;
     align-items: baseline;
+    height: 100%;
 }
 
-.search-btn{
+.search-btn {
     margin-bottom: -10px;
 }
 
-.note{
+.note {
     text-align: center;
     font-style: italic;
     color: #6c6868;
     margin-top: 30px;
 }
 
-.disabled-checkbox{
+.disabled-checkbox {
     width: 100px;
     height: 100px;
     margin-left: 100px;
 }
 
-/* input[type="checkbox"] {
-    background: red;
-    color: white;
-  }
-  
-  input[type="checkbox"] {
-    appearance: none;
-    height: 100px;
+.ticket-booking {
+    display: flex;
+    border: 1px solid #dde2e8;
+    flex-wrap: wrap;
+}
+
+.card {
     width: 100px;
-    border: 1px solid black;
-  }
-  
-  input[type="checkbox"]:after {
-    display: none;
-  }
-  
-  input[type="checkbox"]:checked:after {
-    display: block;
-  } */
+    margin: 10px;
+}
