--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -24,10 +24,10 @@
                             <input formControlName="password" type="password" name="password" id="password"
                                 class="form__input" placeholder="Password">
                         </div>
-                        <div class="row">
+                        <!-- <div class="row">
                             <input type="checkbox" name="remember_me" id="remember_me" class="">
                             <label for="remember_me">Remember Me!</label>
-                        </div>
+                        </div> -->
                         <div class="row">
                             <p class="text-danger">{{msg}}</p>
                         </div>
