--- a/src/app/component/register/register.component.html
+++ b/src/app/component/register/register.component.html
@@ -74,6 +74,7 @@
 
                             </div>
                         </div>
+                        <div class="msg text-danger" *ngIf="msg.length > 1">{{msg}}</div>
                         <div class="green">
                             <input type="submit" value="Register"
                                 [ngClass]="{'disable-btn' : registerForm.status === 'INVALID', 'btn': registerForm.status != 'INVALID'}">
