--- a/src/app/component/transaction-history/transaction-history.component.html
+++ b/src/app/component/transaction-history/transaction-history.component.html
@@ -2,19 +2,19 @@
     <div class="search-section">
         <form class="search-bill-form" [formGroup]="searchBillForm">
             <div class="form-group">
-                <input type="text" placeholder="Search Bill Id" class="seach-bill form-control" (input)="searchBill()" formControlName="billId">
+                <input type="text" placeholder="Search Bill Id" class="seach-bill form-control"
+                    (input)="searchBillById()" formControlName="billId">
             </div>
             <div class="form-group">
                 <input id="startDate" class="form-control" placeholder="yyyy-mm-dd" name="dp"
-                    formControlName="startDate" ngbDatepicker #d="ngbDatepicker"
-                    (dateSelect)="searchBillByDate()"/>
-                <button class="btn btn-outline-secondary bi bi-calendar3" (click)="d.toggle()"
-                    type="button"></button>
+                    formControlName="startDate" ngbDatepicker #d="ngbDatepicker" (dateSelect)="searchBillByDate()"
+                    (input)="searchBillByDate()" />
+                <button class="btn btn-outline-secondary bi bi-calendar3" (click)="d.toggle()" type="button"></button>
             </div>
         </form>
-        
+
     </div>
-    
+
     <table class="table table-striped table-bordered">
         <thead>
             <tr>
@@ -43,4 +43,6 @@
             </tr>
         </tbody>
     </table>
+    <ngb-pagination [pageSize]="pageSize" [collectionSize]="collectionSize" [(page)]="page"
+        aria-label="Default pagination"></ngb-pagination>
 </div>
