--- a/src/app/component/transaction/transaction.component.html
+++ b/src/app/component/transaction/transaction.component.html
@@ -2,19 +2,19 @@
     <div class="search-section">
         <form class="search-bill-form" [formGroup]="searchBillForm">
             <div class="form-group">
-                <input type="text" placeholder="Search Bill Id" class="seach-bill form-control" (input)="searchBill()" formControlName="billId">
+                <input type="text" placeholder="Search Bill Id" class="seach-bill form-control" (input)="searchBill()"
+                    formControlName="billId">
             </div>
             <div class="form-group">
                 <input id="startDate" class="form-control" placeholder="yyyy-mm-dd" name="dp"
-                    formControlName="startDate" ngbDatepicker #d="ngbDatepicker"
-                    (dateSelect)="searchBillByDate()" (input)="searchBillByDate()"/>
-                <button class="btn btn-outline-secondary bi bi-calendar3" (click)="d.toggle()"
-                    type="button"></button>
+                    formControlName="startDate" ngbDatepicker #d="ngbDatepicker" (dateSelect)="searchBillByDate()"
+                    (input)="searchBillByDate()" />
+                <button class="btn btn-outline-secondary bi bi-calendar3" (click)="d.toggle()" type="button"></button>
             </div>
         </form>
-        
+
     </div>
-    
+
     <table class="table table-striped table-bordered">
         <thead>
             <tr>
@@ -27,10 +27,11 @@
                 <th>Phone Number</th>
                 <th>Bus Name</th>
                 <th>Status</th>
+                <th>Action</th>
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let bill of listBill">
+            <tr *ngFor="let bill of listBill | slice: (page-1)*pageSize : (page - 1) * pageSize + pageSize">
                 <th scope="row">{{bill.billId}}</th>
                 <td>{{bill.startDate}}</td>
                 <td>{{bill.startTime}}</td>
@@ -40,8 +41,13 @@
                 <td>{{bill.userPhone}}</td>
                 <td>{{bill.busName}}</td>
                 <td>{{bill.status}}</td>
+                <td>
+                    <button type="button" (click)="openDetail(bill)" class="btn btn-primary" ngClass=""><i
+                            class="bi bi-info-circle"></i>Detail</button>
+                </td>
             </tr>
         </tbody>
     </table>
+    <ngb-pagination [pageSize]="pageSize" [collectionSize]="collectionSize" [(page)]="page"
+        aria-label="Default pagination"></ngb-pagination>
 </div>
-
