--- a/src/app/component/bill-detail/bill-detail.component.html
+++ b/src/app/component/bill-detail/bill-detail.component.html
@@ -1,13 +1,12 @@
 <div class="container">
-    <button type="button" class="btn btn-primary" (click)="goToTransaction()"><i class="bi bi-arrow-left"></i>Go
-        Back</button>
     <div class="row">
         <div class="col-lg-12">
             <div class="card">
                 <div class="card-body">
                     <div class="invoice-title">
                         <h4 class="float-end font-size-15">Invoice #{{bill.billId}} <span
-                                class="badge bg-success font-size-12 ms-2">{{bill.status}}</span></h4>
+                                class="badge bg-success font-size-12 ms-2"
+                                [ngClass]="{'bg-danger': bill.status === 'Not Pay'}">{{bill.status}}</span></h4>
                         <div class="mb-4">
                             <h1 class="mb-1 text-muted"><img src="../../../../assets/img/logo.png" width="30"
                                     height="30" class="d-inline-block align-top" alt="">
