--- a/src/app/component/home/home.component.css
+++ b/src/app/component/home/home.component.css
@@ -44,7 +44,8 @@
 }
 
 .search-btn {
-    margin-bottom: -10px;
+    /* margin-bottom: -10px; */
+    margin-top: 26px;
 }
 
 .note {
@@ -69,4 +70,8 @@
 .card {
     width: 100px;
     margin: 10px;
+}
+
+.bi {
+    margin-right: 5px;
 }
