--- a/src/app/component/transaction/transaction.component.css
+++ b/src/app/component/transaction/transaction.component.css
@@ -1,17 +1,21 @@
-.container{
+.container {
     margin-top: 100px;
 }
 
-.seach-bill{
+.seach-bill {
     margin-bottom: 10px;
 }
 
-.search-bill-form{
+.search-bill-form {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
 }
 
-.form-group{
+.form-group {
     display: flex;
+}
+
+.bi {
+    margin-right: 5px;
 }
