--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -50,10 +50,14 @@
         <div class="schedule-list">
             <div class="bus-infor">
                 <h3 class="bus-name"><i class="bi bi-clock"></i>Start Time : {{schedule.startTime}}</h3>
-                <span class="bus-name"><i class="bi bi-bus-front"></i>Bus Name: {{schedule.bus.name}}</span>
-                <span class="departure">Seat Left : {{schedule.seatLeft}}</span>
-                <span class="destination"><i class="bi bi-geo-alt-fill"></i>Departure: {{schedule.departure}}</span>
-                <span class="departure"><i class="bi bi-geo-fill"></i>Destination: {{schedule.destinations}}</span>
+                <span class="bus-infor-title bus-name"><i class="bi bi-bus-front"></i>Bus Name:
+                    {{schedule.bus.name}}</span>
+                <span class="bus-infor-title departure"><i class="bi bi-caret-right-fill"></i>Seat Left :
+                    {{schedule.seatLeft}}</span>
+                <span class="bus-infor-title destination"><i class="bi bi-geo-alt-fill"></i>Departure:
+                    {{schedule.departure}}</span>
+                <span class="bus-infor-title departure"><i class="bi bi-geo-fill"></i>Destination:
+                    {{schedule.destinations}}</span>
             </div>
             <button type="button" class="btn btn-success" data-toggle="collapse"
                 [attr.data-target]="'#ticketCollapse'+i" aria-expanded="false"
